--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,30 @@ html {
     font-size: 62.5%;
     font-family: 'Roboto', sans-serif;
 }
+
+body {
+    background-color: #f6f8f9;
+    color: #42464f;
+}
+
+/* header css start  */
+
+.hd-ctn {
+    height: 80px;
+    background-color: #fff;
+    padding: 20px 0 20px 5px;
+}
+
+.hd-ctn h1 {
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 4rem;
+}
+
+.logo {
+    vertical-align: middle;
+}
+
+/* header css ends  */
+
+
