--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,4 +35,51 @@ body {
 
 /* header css ends  */
 
+/* main overall rules  */
+
+main {
+    max-width: 80%;
+    height: 100vh;
+    margin: 0 auto;
+    background-color: #fff;
+    margin-top: 50px;
+    border: 1px solid #fff;
+    border-radius: 5px;
+}
+
+/* main overall rules end  */
+
+/* button container section css  */
+
+.btn-ctn {
+    width: 100%;
+    height: 60px;
+    border-bottom: 3px solid #f6f8f9;
+    padding: 15px 0;
+}
+
+.btn {
+    font-size: 1.2rem;
+    padding: 6px;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.cta-left {
+    background-color: #46adf1;
+    color: #fff;
+    border: 2px solid #46adf1;
+    width: 70px;
+    margin: 0 8px 0 40px;
+}
+
+.cta-right {
+    background-color: transparent;
+    color: #cfd4d8;
+    border: 2px solid #ced3d7;
+    width: 90px;
+}
+
+/* button section css end  */
+
 
