--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
 .hd-ctn {
     height: 80px;
     background-color: #fff;
-    padding: 20px 0 20px 5px;
+    padding: 20px 0 20px 20px;
 }
 
 .hd-ctn h1 {
@@ -62,6 +62,14 @@ main {
     padding: 6px;
     border-radius: 5px;
     font-weight: bold;
+}
+
+.btn:hover {
+    cursor: pointer;
+    background-color: salmon;
+    border: transparent;
+    transform: translateY(-6px);
+    transition: ease .40s;
 }
 
 .cta-left {
